tests/integration/features/html/parallelization/06_parallelization_sdoc_parsing_problem_in_child_process/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: Could not parse file: {{.*}}input1.sdoc:1:1: Expected '[DOCUMENT]' => '*THIS DOCUM'
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
CHECK: error: Parallelizer: Failed child process: PID: {{\d+}}, exit code: {{\d+}}.
